2001-02-27  Ray Tomlinson  <RTomlinson@bbn.com>

	* PublishHistory
	New facility to assist in debugging publishing errors.

	PublishHistory keeps a stack dump for the most recent add, change,
	and publish events for an object. The stack dumps are flushed
	after a minute of inactivity for the object. The stack dumps for
	any particular object may be dumped as needed.
	
	A PublishHistory object may be instantiated in the Distributor and
	accessed from the Subscriber (for saving publishing events) and
	from the ALPPlan. The interfaces for the ALPPlan and LogPlan have
	been augmented to allow the history object to be retrieved.
	
	The ComplainingLP has been modified to use to dump the recent
	stack traces for objects about which it complains.

	The history object is only instantiated if
	-Dorg.cougaar.core.cluster.publishHistory=true

2001-02-26  Michael Thome  <mthome@bbn.com>

	* SharedPlugInManager
	I just checked in some new facilities useful for debugging and
	performance analysis.  The basic idea is to watch how simple
	plugins are scheduled: we can watch how long "Shared Thread"
	plugins take to execute and keep statistics.  We also watch to see
	if plugins block or otherwise fail to return from execute(). 
	
	org.cougaar.core.cluster.SharedPlugInManager.statistics=false Set
	it to true to get periodic dumps of plugin statistics to the file
	<NODENAME>.statistics in the current directory.  Requires that the
	watcher be enabled in order to actually get the output, but
	perhaps some metrics display should get access to the info. 

	org.cougaar.core.cluster.SharedPlugInManager.watching=true Set it
	to false to disable the watcher (default is enabled). When enabled,
	will complain whever it sees a plugin run or block for more than
	15 seconds.  It will also cause the above statistics file(s) to be
	(re)generated approximately every two minutes.  The watcher is one
	thread per vm, so it isn't too expensive.

	* DBConnectionPool